[gd_scene load_steps=3 format=3 uid="uid://d0yu8qi8dncpi"]

[ext_resource type="Script" uid="uid://caqeytolj52na" path="res://menu_inicio.gd" id="1_b5qna"]
[ext_resource type="Texture2D" uid="uid://ckyprqvsqe2g8" path="res://68168bf9710769ab394e1db49dc2b7a5.jpg" id="1_cukxd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5qna")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575.75, 324)
scale = Vector2(0.808772, 0.72)
texture = ExtResource("1_cukxd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 271.0
offset_right = 292.0
offset_bottom = 445.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "             
 
"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "  
 "
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -215.5
offset_right = 157.5
offset_bottom = 215.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "       Jugar       "
icon_alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Tutorial"

[node name="Button3" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Sortir"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button2" to="." method="_on_button_22_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button3" to="." method="_on_button_3_pressed"]
